1. Updated image 2. Created About, Contact, Error pages 3. Added custom shimmer effect. 4. Created RestaurantMenu view page 5. Use react-router-dom, created appRouter and provided to the app for nested routing and dynamic routing

--- a/index.css
+++ b/index.css
@@ -33,3 +33,14 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.shimmer-card {
+  width: 200px;
+  height: 200px;
+  background: lightgray;
+  margin: 20px;
+}
+
+.menu {
+  display: flex;
+}
